[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/textures/Car/car_idle01.png" type="Texture" id=1]
[ext_resource path="res://Assets/textures/Car/car_die.png" type="Texture" id=2]
[ext_resource path="res://Assets/textures/Car/car_shoot02.png" type="Texture" id=3]
[ext_resource path="res://Assets/textures/Car/car_idle02.png" type="Texture" id=4]
[ext_resource path="res://Assets/textures/Car/car_shoot01.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Car.gd" type="Script" id=6]
[ext_resource path="res://Assets/sounds/Thomp/Thomp_1_Shot.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("collider/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -733.487, 0 ), Vector2( 272.222, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collider/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.55 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("collider/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collider/AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.9, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true, true, false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collider/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "reset"
length = 0.001
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("collider/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -733.487, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collider/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("collider/AnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset_timer"
} ]
}

[sub_resource type="Animation" id=4]
length = 4.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("collider/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.95, 1.05, 1.15, 1.25, 1.35, 1.45, 1.55, 1.65, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.65, 2.75, 2.85, 2.95, 3.05, 3.15, 3.25, 3.35, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 3, 2, 1, 0, 3, 2, 1, 0, 3, 2, 1, 0, 3, 2, 1, 0, 3, 2, 1, 0, 3, 2, 1, 0, 3, 2, 1, 0, 3, 2, 1, 0, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 272.222, 0 ), Vector2( 4300, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("collider/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.5, 0.95, 1.35, 1.8, 2.2, 2.65, 3.05, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 51.5581, 17.8247 )

[node name="Car" type="Position2D" groups=[
"enemyCar",
]]
scale = Vector2( 0.353052, 0.353052 )
script = ExtResource( 6 )

[node name="AnimationCar" type="AnimationPlayer" parent="."]
autoplay = "reset"
anims/appear = SubResource( 1 )
anims/die = SubResource( 2 )
anims/reset = SubResource( 3 )
anims/shoot = SubResource( 4 )
next/appear = "shoot"
next/die = "reset"
next/reset = "Auto_idle"
next/shoot = "reset"

[node name="collider" type="Area2D" parent="."]
position = Vector2( -733.487, 0 )
scale = Vector2( 1, 0.988528 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="collider"]
frames = SubResource( 5 )
animation = "New Anim"

[node name="CollisionShape2D" type="CollisionShape2D" parent="collider"]
scale = Vector2( 13.3531, 13.3531 )
shape = SubResource( 6 )
disabled = true

[node name="shotSound" type="AudioStreamPlayer2D" parent="collider"]
position = Vector2( 733.487, 0 )
scale = Vector2( 1, 1.01161 )
stream = ExtResource( 7 )
bus = "SFX"

[node name="Car_Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="input_event" from="collider" to="." method="_on_collider_input_event"]
[connection signal="timeout" from="Car_Timer" to="." method="_on_Car_Timer_timeout"]
